--- a/payment-form.html
+++ b/payment-form.html
@@ -29,7 +29,7 @@
           <div class="navbar-nav ms-sm-auto text-end me-2">
             <a class="nav-link" href="index.html" aria-current="page">Home</a>
             <a class="nav-link" href="Crud.html">Curd App</a>
-            <a class="nav-link" href="Resume.html">Rusume</a>
+            <a class="nav-link" href="Resume.html">Resume</a>
             <a class="nav-link active" href="payment-form.html">Form</a>
             <a class="nav-link" href="Game.html">Game</a>
           </div>
