--- a/Crud.html
+++ b/Crud.html
@@ -35,7 +35,7 @@
         <div class="navbar-nav ms-sm-auto text-end me-2">
           <a class="nav-link" href="index.html" >Home</a>
           <a class="nav-link active" href="Crud.html" aria-current="page">Curd App</a>
-          <a class="nav-link" href="Resume.html">Rusume</a>
+          <a class="nav-link" href="Resume.html">Resume</a>
           <a class="nav-link" href="payment-form.html">Form</a>
           <a class="nav-link" href="Game.html">Game</a>
         </div>
